WIP, il faut fonctionner avec sleep et /dev/urandom

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -52,8 +52,8 @@ BONUS_OBJS = ${BONUS_SRCS:.c=.o}
 NAME = libft.a
 
 CC = gcc
-CFLAGS= -Wall -Wextra -Werror
-#CFLAGS= -Wall -Wextra -Werror -fsanitize=address -g3
+#CFLAGS= -Wall -Wextra -Werror
+CFLAGS= -Wall -Wextra -Werror -fsanitize=address -g3
 
 ifeq (${MAKECMDGOALS}, bonus)
 SRCS += ${BONUS_SRCS}
